# cb-search

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  aclocal.m4  build.sh  config-nscsearch.h.in  configure.ac  flake.nix  package.nix  test_python_module.sh
example/: LICENSE  Q01560.fasta
include/: constants.hpp  debug.hpp  exceptions.hpp
include/alignment/: alignbase.hpp  alignmentprinter.hpp
include/alignment/nw/: needlemanwunsch.hpp  nwgapaffinitymatrices.hpp
include/alignment/og/: oggapaffinitymatrices.hpp  onewayglobal.hpp
include/alignment/sw/: smithwaterman.hpp  swgapaffinitymatrices.hpp
include/dal/: sequencereader.hpp  sequencereaderfasta.hpp  sequencereaderstub.hpp
include/filters/: composition.hpp  filterbase.hpp  filterpipeline.hpp  kmer.hpp  shortword.hpp
include/identification/: compositioncalculator.hpp  compositionmatrix.hpp  compositionsimilarity.hpp  fragmentextender.hpp  frequencyidentificator.hpp  sequencefrequency.hpp  simicomp.hpp
include/method/: nscsearch.hpp  options.hpp  resultsoutput.hpp
include/model/: fragment.hpp  matrixresidue.hpp  results.hpp  resultsitem.hpp  sequence.hpp
include/python/: cbsearch.i  examples.hpp  examples.i  identification.hpp  identification.i  nscsearch.hpp  nscsearch.i
include/residue/: alphabetreduction.hpp  matrixrecalculator.hpp  scoringmatrix.hpp
include/tests/: unittest.hpp
include/tests/alignment/: testalignmentprinter.hpp
include/tests/alignment/nw/: testneedlemanwunsch.hpp  testnwgapaffinitymatrices.hpp
include/tests/alignment/og/: testoggapaffinitymatrices.hpp  testonewayglobal.hpp
include/tests/alignment/sw/: testsmithwaterman.hpp  testswgapaffinitymatrices.hpp
include/tests/dal/: testsequencereaderfasta.hpp
include/tests/filters/: testcomposition.hpp  testfilterpipeline.hpp  testkmer.hpp  testshortword.hpp
include/tests/identification/: testcompositioncalculator.hpp  testcompositionidentificator.hpp  testcompositionmatrix.hpp  testcompositionsimilarity.hpp  testfragmentextender.hpp  testfrequencyidentificator.hpp  testsequencefrequency.hpp  testsimicomp.hpp
include/tests/method/: testnscsearch.hpp  testoptions.hpp  testresultsoutput.hpp
include/tests/residue/: testalphabetreduction.hpp  testmatrixrecalculator.hpp  testscoringmatrix.hpp
include/tests/utils/: testfileutils.hpp  testfunctionutils.hpp  testnumericutils.hpp  teststringutils.hpp
include/utils/: fasta.hpp  fileutils.hpp  functionutils.hpp  numericutils.hpp  stringutils.hpp  threadpool.hpp
src/: debug.cpp  main.cpp
src/alignment/: alignbase.cpp  alignmentprinter.cpp
src/alignment/nw/: needlemanwunsch.cpp  nwgapaffinitymatrices.cpp
src/alignment/og/: oggapaffinitymatrices.cpp  onewayglobal.cpp
src/alignment/sw/: smithwaterman.cpp  swgapaffinitymatrices.cpp
src/dal/: sequencereader.cpp  sequencereaderfasta.cpp  sequencereaderstub.cpp
src/filters/: composition.cpp  filterpipeline.cpp  kmer.cpp  shortword.cpp
src/identification/: compositioncalculator.cpp  compositionmatrix.cpp  compositionsimilarity.cpp  fragmentextender.cpp  frequencyidentificator.cpp  sequencefrequency.cpp  simicomp.cpp
src/method/: nscsearch.cpp  options.cpp  resultsoutput.cpp
src/model/: fragment.cpp  matrixresidue.cpp  sequence.cpp
src/python/: cbsearch.cpp  examples.cpp  identification.cpp  nscsearch.cpp
src/residue/: alphabetreduction.cpp  matrixrecalculator.cpp  scoringmatrix.cpp
src/tests/: test.cpp  unittest.cpp
src/tests/alignment/: testalignmentprinter.cpp
src/tests/alignment/nw/: testneedlemanwunsch.cpp  testnwgapaffinitymatrices.cpp
src/tests/alignment/og/: testoggapaffinitymatrices.cpp  testonewayglobal.cpp
src/tests/alignment/sw/: testsmithwaterman.cpp
src/tests/dal/: testsequencereaderfasta.cpp
src/tests/data/: db_5_lcrs.fasta  output_1.txt  query_1_lcr.fasta
src/tests/filters/: testcomposition.cpp  testfilterpipeline.cpp  testkmer.cpp  testshortword.cpp
src/tests/identification/: testcompositioncalculator.cpp  testcompositionmatrix.cpp  testcompositionsimilarity.cpp  testfragmentextender.cpp  testfrequencyidentificator.cpp  testsequencefrequency.cpp  testsimicomp.cpp
src/tests/method/: testnscsearch.cpp  testoptions.cpp  testresultsoutput.cpp
src/tests/python/: testexamples.py  testidentification.py
src/tests/residue/: testalphabetreduction.cpp  testmatrixrecalculator.cpp  testscoringmatrix.cpp
src/tests/utils/: testfileutils.cpp  testfunctionutils.cpp  testnumericutils.cpp  teststringutils.cpp
src/utils/: fasta.cpp  fileutils.cpp  functionutils.cpp  numericutils.cpp  stringutils.cpp  threadpool.cpp
